# fhir-sync

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.proto  Makefile  README.md  TESTING_GUIDE.md  build.rs  gen-proto.ps1
.devcontainer/: Cargo-copy.toml  Dockerfile  devcontainer.json
proto/: fhir_sync.proto
proto/arsmedicatech/: fhir_sync.proto
proto/google/: README.md
proto/google/fhir/proto/r5/core/: codes.proto  datatypes.proto  valuesets.proto
proto/google/fhir/proto/r5/core/resources/: appointment.proto  condition.proto  encounter.proto  patient.proto
src/: api.rs  binlog.rs  config.rs  main.rs  proto.rs  webhook.rs
src/adapters/: mod.rs  oscar.rs  surreal.rs
src/adapters/entities/: patient.rs
src/domain/: patient.rs
src/ext/: column_value_ext.rs  mod.rs
src/service/: fhir_sync.rs  mod.rs
