[package]
name        = "fhir-sync"
version     = "0.1.0"
edition     = "2021"

[build-dependencies]
tonic-build    = "0.13"             # build script for generating gRPC code
walkdir        = "2.5"

[dependencies]
# --- Tokio runtime --------------------------------------------------------
tokio          = { version = "1.38", features = ["rt-multi-thread", "macros", "signal"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio-stream   = "0.1.17"

# --- gRPC & Protobuf stack -----------------------------------------------
tonic          = { version = "0.13", features = ["transport", "tls-webpki-roots"] }
prost          = "0.13"
prost-types    = "0.13"
tonic-health   = "0.13"              # adds standard gRPC health service
tonic-reflection = "0.13"           # enables `grpcurl` discovery

# --- FHIR modelling -------------------------------------------------------
fhirbolt       = { version = "0.4", features = ["r4b"] }  # R4B structs
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"

# --- Databases / adapters (optional) -------------------------------------
surrealdb      = { version = "1.5", optional = true }
mysql_async    = { version = "0.33", optional = true }

# --- Other dependencies ---------------------------------------------------
anyhow         = "1.0"              # error handling
axum           = { version = "0.8.4", features = ["json", "macros"] }  # HTTP client
base64ct       = "<1.8.0"
toml           = "0.8"
chrono         = { version = "0.4.41", features = ["serde"] }  # date/time handling
axum-server   = "0.7.2"              # HTTP server for health checks

# --- OSCAR EMR MariaDB subscription --------------------------------------
mysql-binlog-connector-rust = "0.3.2"

[features]
default = ["surrealdb"]
